nav bar overflow fix

--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -1,5 +1,7 @@
-.App {
-  text-align: center;
+  @import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Noto+Serif+JP:wght@400;600;700&display=swap');
+
+.main {
+
 }
 
 .App-header {
@@ -10,5 +12,12 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255,255,0.3)
+    );
+}
+
+
+html {
+
+  background-color: black;
 }
